refactor(monster): 重构怪物类结构并优化地图刷怪逻辑
- 使用Lombok注解替代手动实现getter/setter方法
- 为怪物类添加详细中文注释和属性分组
- 移除过时的日志工厂代码，统一使用Lombok注解
- 修复数值计算中的类型转换问题，确保浮点精度
- 优化地图刷怪逻辑，优先处理BOSS怪物刷新
- 改进空值检查，防止潜在的空指针异常
- 重构条件判断逻辑，提高代码可读性和性能
- 更新方法命名规范，统一使用标准的getter/setter模式
- 优化循环遍历逻辑，提升代码执行效率
- 调整定时任务实现方式，使用更简洁的Lambda表达式

fix(map): 修复地图怪物生成逻辑问题

- 添加了Consumer函数式接口导入
- 修改数据库查询条件，支持世界ID为-1的全局生命体数据
- 添加空值检查避免空指针异常
- 优化怪物生成容量限制逻辑，仅对非BOSS怪物进行容量检查
- 实现BOSS怪物优先刷新机制
- 跳过已处理的BOSS刷怪点以避免重复生成
- 改进怪物刷新队列处理流程